--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,5 +21,8 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Build
-      run: go build -v ./...
+    - name: Install
+      run: go install
+
+    - name: Check Version 
+      run: ghost version
